Updated the collector in ParallelStream implementation